Improved password validation

--- a/libs/client-web/account/domain/account-data/src/lib/components/new-password-form/new-password-form.component.html
+++ b/libs/client-web/account/domain/account-data/src/lib/components/new-password-form/new-password-form.component.html
@@ -11,15 +11,87 @@
       [toggleMask]="true"
       [feedback]="false"
     />
-    @if (newPassword.invalid && newPassword.dirty) {
-      <ng-container slot="error-message">
-        @if (newPassword.getError('minlength')) {
-          <lib-error-message
-            message="Password should have at least 8 characters"
-          />
-        } @else if (newPassword.getError('required')) {
-          <lib-error-message />
-        }
+    @if (newPassword.dirty) {
+      <ng-container>
+        @let minLengthError =
+          newPassword.getError('minlength') || newPassword.getError('required');
+        <span
+          [ngClass]="{
+            'text-red-300': minLengthError,
+            'text-green-300': !minLengthError,
+          }"
+        >
+          @if (minLengthError) {
+            <span class="pi pi-times-circle"></span>
+          } @else {
+            <span class="pi pi-check-square"></span>
+          }
+          At least 8 characters
+        </span>
+
+        @let uppercaseError =
+          newPassword.getError('uppercase') || newPassword.getError('required');
+        <span
+          [ngClass]="{
+            'text-red-300': uppercaseError,
+            'text-green-300': !uppercaseError,
+          }"
+        >
+          @if (uppercaseError) {
+            <span class="pi pi-times-circle"></span>
+          } @else {
+            <span class="pi pi-check-square"></span>
+          }
+          At least 1 uppercase character
+        </span>
+
+        @let lowercaseError =
+          newPassword.getError('lowercase') || newPassword.getError('required');
+        <span
+          [ngClass]="{
+            'text-red-300': lowercaseError,
+            'text-green-300': !lowercaseError,
+          }"
+        >
+          @if (lowercaseError) {
+            <span class="pi pi-times-circle"></span>
+          } @else {
+            <span class="pi pi-check-square"></span>
+          }
+          At least 1 lowercase character
+        </span>
+
+        @let numericError =
+          newPassword.getError('numeric') || newPassword.getError('required');
+        <span
+          [ngClass]="{
+            'text-red-300': numericError,
+            'text-green-300': !numericError,
+          }"
+        >
+          @if (numericError) {
+            <span class="pi pi-times-circle"></span>
+          } @else {
+            <span class="pi pi-check-square"></span>
+          }
+          At least 1 numeric character
+        </span>
+
+        @let specialError =
+          newPassword.getError('special') || newPassword.getError('required');
+        <span
+          [ngClass]="{
+            'text-red-300': specialError,
+            'text-green-300': !specialError,
+          }"
+        >
+          @if (specialError) {
+            <span class="pi pi-times-circle"></span>
+          } @else {
+            <span class="pi pi-check-square"></span>
+          }
+          At least 1 special character
+        </span>
       </ng-container>
     }
   </lib-form-field>
@@ -34,7 +106,7 @@
     />
 
     @if (newPasswordConfirmation.invalid && newPasswordConfirmation.dirty) {
-      <ng-container slot="error-message">
+      <ng-container slot="errors">
         @if (newPasswordConfirmation.getError('required')) {
           <lib-error-message />
         } @else if (newPasswordConfirmation.getError('passwordMismatch')) {
