--- a/libs/client-web/account/domain/account-data/src/lib/account-data.component.html
+++ b/libs/client-web/account/domain/account-data/src/lib/account-data.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="flex flex-col gap-4 bg-content-background p-4 rounded-base">
     <h3 class="text-lg">Account data</h3>
-    @if (loading()) {
+    @if (loading() && !user()) {
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
     } @else if (error()) {
