--- a/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.html
@@ -6,7 +6,7 @@
       [min]="0"
       [maxFractionDigits]="2"
       [ngModel]="minPrice()"
-      (onBlur)="setPrice('min')"
+      (onBlur)="setPrice('minPrice')"
       mode="decimal"
       currency="USD"
       class="w-full"
@@ -23,7 +23,7 @@
       slot="input"
       [min]="0"
       [ngModel]="maxPrice()"
-      (onBlur)="setPrice('max')"
+      (onBlur)="setPrice('maxPrice')"
       [maxFractionDigits]="2"
       mode="decimal"
       currency="USD"
