--- a/libs/client-web/browse/feature/books/src/lib/filters/filter/filter.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filter/filter.component.html
@@ -5,15 +5,16 @@
     [formControl]="searchControl"
   />
   <div class="flex flex-col gap-1">
-    @for (item of items(); track getItemId()(item)) {
+    @for (item of items(); track item.id) {
       <div class="flex items-center gap-2">
         <label>
           <p-checkbox
             [ngModel]="selectedItems()"
-            (ngModelChange)="selectItem($event, item)"
+            (ngModelChange)="toggleItem(item)"
+            [inputId]="item.id"
             [value]="item"
           />
-          {{ getLabelItem(item) }}
+          <span class="capitalize ml-2">{{ getLabelItem(item) }}</span>
         </label>
       </div>
     } @empty {
