--- a/libs/client-web/browse/feature/books/src/lib/search/search.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/search/search.component.html
@@ -1,13 +1,12 @@
 <div class="2xl:min-w-[30rem] w-full relative">
   <input
     #searchInput
-    [value]="search()"
     type="text"
     pInputText
+    [formControl]="searchControl"
     class="pr-12"
     [fluid]="true"
     placeholder="Search by title"
-    (input)="setSearch($event)"
   />
   @if (searchInput.value.length) {
     <p-button
