--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -26,15 +26,15 @@
   />
 </header>
 <main class="flex gap-8 xl:gap-16 mt-16 flex-col">
-  @defer (on viewport) {
+  @for (section of sections(); track section.name) {
     <section
       class="flex flex-col items-center w-full mx-auto max-w-[120rem] gap-base"
     >
       <div class="flex items-center justify-between w-full capitalize">
-        <h2 class="text-4xl">{{ bookTag.INCOMING }}</h2>
+        <h2 class="text-4xl">{{ section.name }}</h2>
         <a
           [routerLink]="appRoutePaths.BOOKS()"
-          [queryParams]="{ tags: bookTag.INCOMING }"
+          [queryParams]="section.queryParams"
         >
           See more
         </a>
@@ -42,65 +42,11 @@
       <lib-books-grid
         (addToCartEvent)="addToCart($event)"
         class="w-full"
-        [books]="incomingBooks()"
+        [books]="section.books"
         [loading]="loading()"
         [error]="error()"
         [skeletonsCount]="6"
       />
     </section>
-  } @placeholder {
-    <lib-skeleton-books-section />
-  }
-
-  @defer (on viewport) {
-    <section
-      class="flex flex-col items-center w-full mx-auto max-w-[120rem] gap-base"
-    >
-      <div class="flex items-center justify-between w-full capitalize">
-        <h2 class="text-4xl">{{ bookTag.BESTSELLER }}</h2>
-        <a
-          [routerLink]="appRoutePaths.BOOKS()"
-          [queryParams]="{ tags: bookTag.BESTSELLER }"
-        >
-          See more
-        </a>
-      </div>
-      <lib-books-grid
-        (addToCartEvent)="addToCart($event)"
-        class="w-full"
-        [books]="bestsellerBooks()"
-        [loading]="loading()"
-        [error]="error()"
-        [skeletonsCount]="6"
-      />
-    </section>
-  } @placeholder {
-    <lib-skeleton-books-section />
-  }
-
-  @defer (on viewport) {
-    <section
-      class="flex flex-col items-center w-full mx-auto max-w-[120rem] gap-base"
-    >
-      <div class="flex items-center justify-between w-full capitalize">
-        <h2 class="text-4xl">{{ bookTag.NEW }}</h2>
-        <a
-          [routerLink]="appRoutePaths.BOOKS()"
-          [queryParams]="{ tags: bookTag.NEW }"
-        >
-          See more
-        </a>
-      </div>
-      <lib-books-grid
-        (addToCartEvent)="addToCart($event)"
-        class="w-full"
-        [books]="newBooks()"
-        [loading]="loading()"
-        [error]="error()"
-        [skeletonsCount]="6"
-      />
-    </section>
-  } @placeholder {
-    <lib-skeleton-books-section />
   }
 </main>
