--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -71,7 +71,7 @@
             <p-inputNumber
               [showButtons]="true"
               [formControl]="amount"
-              [size]="6"
+              [size]="'small'"
               [min]="1"
               (onBlur)="onBlurInput()"
               buttonLayout="horizontal"
@@ -144,7 +144,7 @@
           <p-inputNumber
             [showButtons]="true"
             [formControl]="amount"
-            [size]="6"
+            [size]="'small'"
             [min]="1"
             [max]="availableQuantity()"
             (onBlur)="onBlurInput()"
